removed features for minified build

--- a/src/style.css
+++ b/src/style.css
@@ -3,14 +3,6 @@
     --b: paused;
 }
 
-body {
-    background: #3c4491;
-    color: rgb(170, 165, 201);
-    display: flex;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-}
 
 #instruction {
     transition: all 0.5s;
@@ -29,33 +21,27 @@ body {
     align-items: center;
 }
 
-#circle1, #circle2, #circle3 {
+#circle1, #circle2 {
     display: flex;
     justify-content: center;
     align-items: center;
     animation: breathe var(--a) infinite ease-in-out;
     animation-play-state: var(--b); 
+    border: 5px solid;
     border-radius: 50%;
 }
 
 #circle1 {
     width: 80vmin;
     height: 80vmin;
-    background-color: rgb(85, 70, 185);
 }
 
 
 #circle2 {
     width: 70%;
     height: 70%;
-    background-color: rgb(170, 165, 201);
 }
 
-#circle3 {
-    width: 40%;
-    height: 40%;
-    background-color: rgb(146, 125, 67);
-}
 
 @keyframes breathe {
     0%, 100% {
