--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,10 @@
     width: 100%;
 }
 
+body {
+    flex-direction: column;
+}
+
 #parent, body {
     display: flex;
     justify-content: center;
