--- a/src/style.css
+++ b/src/style.css
@@ -7,9 +7,11 @@ body {
     background: #3c4491;
     color: rgb(170, 165, 201);
     display: flex;
+    flex-direction: column;
     align-items: center;
-    height: 100vh;
-    margin: 0;
+    min-height: 100vh;
+    margin: 5px;
+    padding: 2%;
 }
 
 #instruction {
@@ -19,8 +21,8 @@ body {
 
 #parent {
     display: flex;
-    flex-grow: 1;
     width: 100%;
+    padding: 20px;
 }
 
 #parent, body {
